--- a/src/MainPage/Header/Header.module.css
+++ b/src/MainPage/Header/Header.module.css
@@ -46,3 +46,48 @@
 
     color: #FFFFFF;
 }
+
+@media screen and (max-width: 1300px) {
+    .imageText h2 {
+        font-size: 38px;
+        line-height: 38px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .imageText {
+        top: 42%;
+        right: 26px;
+    }
+
+    .imageText h2 {
+        font-size: 25px;
+        line-height: 25px;
+    }
+
+    .imageText p {
+        margin-top: 13px;
+        font-size: 14px;
+        line-height: 14px;
+    }
+}
+
+
+@media screen and (max-width: 450px) {
+    .imageText {
+        top: 36%;
+        right: 12px;
+    }
+
+    .imageText h2 {
+        font-size: 8px;
+        line-height: 11px;
+    }
+
+    .imageText p {
+        margin-top: 4px;
+        font-size: 5px;
+        line-height: 5px;
+    }
+
+}
