--- a/src/ProfilePage/ProfilePage.module.css
+++ b/src/ProfilePage/ProfilePage.module.css
@@ -1,6 +1,6 @@
 .container h2 {
     text-align: center;
-    margin: 30px 0 80px 0;
+    margin: 30px 0 40px 0;
     font-size: 48px;
 }
 
@@ -23,7 +23,7 @@
 
 .container h3 {
     font-size: 32px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .footer {
@@ -41,4 +41,8 @@
     font-size: 24px;
     line-height: 140%;
     color: #709583;
+}
+
+.button {
+    margin-top: 20px;
 }
