--- a/src/LoginPage/LoginPage.module.css
+++ b/src/LoginPage/LoginPage.module.css
@@ -52,12 +52,29 @@
     box-shadow: 0 0 40px rgba(112, 149, 131, 0.5);
 }
 
-.container button {
-    margin: 0 auto;
-    padding: 8px;
-    border-radius: 5px;
+.loginButton, .registerButton {
+    padding: 15px 0 15px 0;
+    width: 100%;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
     outline: 0;
     border: 0;
-    display: block;
+    border-radius: 10px;
     cursor: pointer;
+}
+
+.loginButton {
+    background: #709583;
+    color: white;
+    letter-spacing: normal;
+}
+
+.loginButton:hover {
+    background: rgba(112, 149, 131, 0.75);
+}
+
+.registerButton {
+    background: #FFFFFF;
+    color: #709583;
 }
