--- a/src/CarListPage/BookingModal/BookingModal.module.css
+++ b/src/CarListPage/BookingModal/BookingModal.module.css
@@ -203,6 +203,12 @@
     .featureContainer p {
         font-size: 17px;
     }
+
+    .discountPrice {
+        font-size: 24px;
+        line-height: 125%;
+        margin-left: 143px;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -270,4 +276,10 @@
         width: 16px;
         height: 16px;
     }
+
+    .input:checked:after {
+        width: 6px;
+        height: 3px;
+    }
+
 }
